<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="16dp"
    android:layout_gravity="center"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="2">

    <TextView
        android:id="@+id/textDate"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/tvDate"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
         />

    <EditText
        android:id="@+id/edDate"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.EditText"
        android:focusable="false"
        android:hint="@string/enter_date"
        />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/textEarned"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tv_points_earned"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />

        <EditText
            android:id="@+id/edEarned"
            android:inputType="number"
            android:hint="@string/enter_earned_points"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.EditText"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/textRedeem"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tv_points_redeemed"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />

        <EditText
            android:id="@+id/edRedeemed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/enter_redeemed_points"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.EditText"
            android:inputType="number"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"/>



</LinearLayout>