<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity"
    android:padding="8dp"
    android:layout_gravity="center"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/textStartDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tv_start_date"
            android:textStyle="bold"

            android:textColor="@color/colorPrimaryDark"
            />

        <EditText
            android:id="@+id/edStartDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:focusable="false"
            android:hint="Select Start Date"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.EditText"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/textEndDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tv_end_date"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />

        <EditText
            android:id="@+id/edEndDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:focusable="false"
            android:hint="Select End Date"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.EditText"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnShowDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_details"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:padding="16dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tv_total_earned"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tv_total_redeemed"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/textTotalEarned"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="0"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/textTotalRedeemed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="0"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/textTEarnedValue"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/textRedeemedValue"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_header"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="51dp"
            android:weightSum="4"
            >

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:background="@drawable/borderblack"
                android:gravity="center"
                android:text="@string/sl_no"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_dates"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/borderblack"
                android:gravity="center"
                android:text="@string/date"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_earned"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:background="@drawable/borderblack"
                android:text="@string/points_earned"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                android:gravity="center" />
            <TextView
                android:id="@+id/tv_redeemed"
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_height="match_parent"
                android:background="@drawable/borderblack"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:text="@string/points_redeemed"/>
        </LinearLayout>
    </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/rcvDetails"
     />





</LinearLayout>